# cubic-rubik-2025

./: .gitignore  CMakeLists.txt  README.md  main.cpp  rubikscube.cpp  rubikscube.hpp
